# tangosim

./: .gitignore  LICENSE  README  README_future.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  sim_results.json
docs/: README.md  index.md
docs/api/: gameengine.md  models.md  strategy.md
docs/guides/: advanced.md  coordinates.md  custom_strategies.md  quickstart.md
src/tangosim/: __init__.py  game_replay.py  gameengine.py  main.py  main_simulation.py  models.py  recorder.py  renderer.py  simulator.py  strategy.py
tests/: test_gameengine.py  test_models.py  test_recorder.py  test_renderer.py  test_simulator.py
